--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
       <!-- Footer -->
 
 
-      <footer class="PiedePagina my-5">
+      <footer class="PiedePagina mt-5">
        <div class="container-fluid">
           <div class="row">
             <div class="col-3"></div>
-            <div class="col-2 iconos"><h3>VIAJES CHILE</h3></div>
+            <div class="col-2"><h3 class="iconos">VIAJES CHILE</h3></div>
             <div class="col-4"></div>
             <div class="col-2 iconos gap-3">
               <a href="https://github.com" target="_blank" class="text-white"><i class="fa-brands fa-square-github" style="color: white;"></i></a>
