revision final, ultimas modificaciones y enviar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- Barra de navegacion -->
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-md fixed-top">
       <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center textonavbar2" href="#">
               <img src="assets/img/viajes.svg" alt="Logo" class="me-2 ms-5" style="height: 50px;">
@@ -46,7 +46,7 @@
     <!-- Carrusel -->
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div id="inicio"  class="carousel-item active">
             <img src="assets/img/carousel1.jpg" class="ImagenCarrusel d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
